deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitalgarden
  namespace: alyssa
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "digitalgarden:latest",
            "namespace": "alyssa"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"_site")].image",
          "paused": false
        }
      ]      
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: digitalgarden
  template:
    metadata:
      labels:
        app: digitalgarden
    spec:
      containers:
      - name: site
        image: digitalgarden:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
