deploy/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitalgarden-dev
spec:
  selector:
    app: digitalgarden-dev
  ports:
  - protocol: TCP
    port: 8080
    targetPort: web
    name: web
