deploy/ingress-dev.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: digitalgarden-dev
  namespace: alyssa
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - notes.dev.its-a-lisa.com
    secretName: digitalgarden-dev-cert
  rules:
  - host: notes.dev.its-a-lisa.com
    http:
      paths:
      - path: _site
        pathType: Prefix
        backend:
          service:
            name: digitalgarden-dev
            port:
              number: 8080
